<resources>
    <string name="app_name">BookNavigationA v.0.1</string>
    <string name="label_author">Authors</string>
    <string name="label_books">Books</string>
    <string name="title_book_inf">TITLE:</string>
    <string name="author_name_book_inf">AUTHOR NAME:</string>
    <string name="book_date">PUBLICATION:</string>
    <string name="book_inf_read">READ</string>
    <string name="book_inf_description">DESCRIPTION:</string>
    <string name="series_label_book_ing">SERIES:</string>
    <string name="book_inf_genre">GENRE:</string>
    <string name="add_to_list">ADD TO LIST</string>
    <string name="was_read">WAS READ</string>
    <string name="book_inf_activity">Book Information</string>
    <string name="file_chooser_button_up_label">Parent folder</string>
    <string name="menu_item_add_book">Add new book</string>
    <string name="source_path">Add new book</string>
</resources>
