<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_x="0px"
        android:layout_y="25px"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="12"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/book_inf_cover"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_marginLeft="16dp"/>

                    <Button
                        android:id="@+id/book_inf_add_to_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/add_to_list"/>

                    <Button
                        android:id="@+id/book_inf_was_read"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/was_read"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_book_inf"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size"/>

                    <TextView
                        android:id="@+id/book_inf_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size"
                        tools:text="book title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/author_name_book_inf"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size"/>

                    <TextView
                        android:id="@+id/book_inf_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size"
                        tools:text="author name"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:text="@string/book_date"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"/>

                        <TextView
                            android:id="@+id/book_inf_publish"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            tools:text="1990"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/book_inf_genre"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size"/>

                    <TextView
                        android:id="@+id/book_inf_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size"
                        tools:text="science_fiction"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:text="@string/series_label_book_ing"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"/>

                        <TextView
                            android:id="@+id/book_inf_series"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            tools:text="series-1"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/book_inf_read"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/book_inf_read"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/book_inf_description"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/book_inf_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="description"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>